# maximus-code-agent

./: .gitignore  MCA_PROJECT_LOG.md  README.md  pyproject.toml
.mca/: config.yaml
.mca/logs/: mca.jsonl
demo_repo/: app.py  converter.py
demo_repo/tests/: test_app.py  test_converter.py  test_stack.py
src/mca/: __init__.py  __main__.py  cli.py  config.py  log.py  server.py
src/mca/cleanup/: hygiene.py
src/mca/journal/: writer.py
src/mca/llm/: __init__.py  client.py
src/mca/memory/: base.py  embeddings.py  graph.py  graph_builder.py  metrics.py  migrations.py  pg_store.py  recall.py  sqlite_store.py
src/mca/orchestrator/: agents.py  approval.py  chat.py  confidence.py  loop.py  prompts.py
src/mca/preflight/: checks.py
src/mca/telegram/: bot.py
src/mca/telemetry/: collectors.py
src/mca/templates/: registry.py
src/mca/tools/: __init__.py  base.py  db_tool.py  dep_doctor.py  done_tool.py  fs_tool.py  git_ops.py  git_tool.py  linter.py  memory_tool.py  registry.py  repo_indexer.py  safe_fs.py  safe_shell.py  shell_tool.py  telemetry_tool.py  test_runner.py
tests/: test_chat.py  test_cleanup.py  test_confidence.py  test_config.py  test_db_tool.py  test_dep_doctor.py  test_e2e_pipeline.py  test_embeddings.py  test_git_ops.py  test_graph.py  test_journal.py  test_linter.py  test_llm_client.py  test_memory.py  test_metrics.py  test_orchestrator.py  test_preflight.py  test_prompts.py  test_recall.py  test_repo_indexer.py  test_safe_fs.py  test_safe_shell.py  test_telemetry.py  test_test_runner.py  test_tool_base.py  test_tool_wrappers.py
(+1 files in other folders)
